tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_message_selector_segment_extern.objc3
module MisplacedQualifierMessageSelectorSegmentExtern;

fn main() -> i32 {
  let receiver = 1;
  return [receiver head: 1 extern: 2];
}